<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobileIndustryCast</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_chat_room">ChatRoom</string>
    <string name="search_posts">SEARCH POSTS</string>
    <string name="search_hint">Search</string>
    <string name="filter_posts">DISPLAY</string>
    <string name="saved_alerts">SAVED ALERTS</string>
    <string name="new_post">NEW POST</string>
    <string name="post_text_hint">Type your message</string>
    <string name="post_button">Post</string>
    <string name="host_port">Host/Port:</string>
    <string name="service_tab">Service</string>
    <string name="user_id_tab">User ID:</string>
    <string name="password_tab">Password</string>
    <string name="host_str">Host</string>
    <string name="host_hint">Host</string>
    <string name="port_hint">Port</string>
    <string name="service_name_hint">Service Name</string>
    <string name="user_id_hint">User ID</string>
    <string name="buyer_toggle">Buyer</string>
    <string name="seller_toggle">Seller</string>
    <string name="trade_toggle">Trade</string>
    <string name="info_toggle">Info</string>
    <string name="broadcast_btn">broadcast_btn</string>
    <string name="Buy">Buy</string>
    <string name="Sell">Sell</string>
    <string name="Trade">Trade</string>
    <string name="dialog_broadcast">Is it a trade, sell or buy offer?</string>
    <string name="Broadcast">Broadcast</string>
    <string name="NEW_MESSAGE">NEW MESSAGE</string>
    <string name="item_photo">Photo of offered item</string>
    <string name="attach_picture_btn">Attach Picture</string>
    <string name="OK">OK</string>
    <string name="OK_btn">OK_btn</string>
    

</resources>