<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChatRoom" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/search_text"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="325dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/search_hint" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:layout_marginRight="50dp"
            android:layout_weight="2.68"
            android:gravity="left|center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/label_filter"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginLeft="102dp"
                android:text="@string/filter_posts"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="60dp" >

                <ToggleButton
                    android:id="@+id/toggle_buyer"
                    android:layout_width="70dp"
                    android:layout_height="46dp"
                    android:checked="true"
                    android:text="@string/buyer_toggle"
                    android:textOff="@string/buyer_toggle"
                    android:textOn="@string/buyer_toggle" />

                <ToggleButton
                    android:id="@+id/toggle_seller"
                    android:layout_width="70dp"
                    android:layout_height="46dp"
                    android:checked="true"
                    android:text="@string/seller_toggle"
                    android:textOff="@string/seller_toggle"
                    android:textOn="@string/seller_toggle" />

                <ToggleButton
                    android:id="@+id/toggle_trade"
                    android:layout_width="70dp"
                    android:layout_height="46dp"
                    android:checked="true"
                    android:text="@string/trade_toggle"
                    android:textOff="@string/trade_toggle"
                    android:textOn="@string/trade_toggle" />

                <ToggleButton
                    android:id="@+id/toggle_info"
                    android:layout_width="70dp"
                    android:layout_height="46dp"
                    android:checked="true"
                    android:text="@string/info_toggle"
                    android:textOff="@string/info_toggle"
                    android:textOn="@string/info_toggle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/post_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/post_text_hint" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/post_btn"
                        android:layout_width="100dp"
                        android:layout_height="46dp"
                        android:layout_marginLeft="32dp"
                        android:text="@string/post_button"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/broadcast_btn"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="100dp"
                        android:layout_height="46dp"
                        android:text="@string/Broadcast" />
                </LinearLayout>
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@drawable/image_background" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="2dp"
                    android:contentDescription="@string/item_photo"
                    android:src="@drawable/car_default" />

            </FrameLayout>

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="65dp"
                android:text="@string/attach_picture_btn" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="625dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/border" >

            <ListView
                android:id="@+id/messagesListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="19dp"
                android:layout_marginRight="23dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1.79" >
            </ListView>
        </FrameLayout>

    </LinearLayout>

</LinearLayout>